--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <h1>My Favourite Song</h1>
-    <video width="600px" height="400px" autoplay loop controls>
-        <source src="./assets/Let It Go video-file.mp4">
+    <video width="600px" height="400px"  controls >
+        <source src="./assets/Let It Go video-file.mp4" type="video/mp4">
     </video>
     <p>Play The Song As Video</p> <br><br>
 
-    <audio autoplay loop controls>
+    <audio  controls>
         <source src="./assets/Let It Go audio-file.mp3" type="audio/mpeg">
     </audio>
     <p>Play The Song As Audio</p>
